--- a/.env
+++ b/.env
@@ -21,8 +21,10 @@ APP_SECRET=ddc933267a1a1075da195af76f85b1fd
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+#MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+#MAILER_DSN=smtp://6df7ac5ef59825:fae7a5a0179a86@smtp.mailtrap.io:2525
+MAILER_DSN=gmail://zzpapy666:raclette666@smtp.gmail.com:587
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
@@ -31,3 +33,8 @@ APP_SECRET=ddc933267a1a1075da195af76f85b1fd
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/gestion_session?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+#MAILER_DSN=gmail://zzpapy666@gmail.com:raclette666@default
+###< symfony/google-mailer ###
