--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ APP_SECRET=ddc933267a1a1075da195af76f85b1fd
 ###> symfony/mailer ###
 #MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
-#MAILER_DSN=smtp://6df7ac5ef59825:fae7a5a0179a86@smtp.mailtrap.io:2525
-MAILER_DSN=gmail://zzpapy666:raclette666@smtp.gmail.com:587
+MAILER_DSN=smtp://6df7ac5ef59825:fae7a5a0179a86@smtp.mailtrap.io:2525
+#MAILER_DSN=gmail://zzpapy666:raclette666@smtp.gmail.com:587
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
