--- a/.env
+++ b/.env
@@ -38,3 +38,8 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/gestion_session?serverVersion=5.7
 # Gmail SHOULD NOT be used on production, use it in development only.
 #MAILER_DSN=gmail://zzpapy666@gmail.com:raclette666@default
 ###< symfony/google-mailer ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
