geo gouv alogolia

--- a/.env
+++ b/.env
@@ -43,3 +43,10 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/gestion_session?serverVersion=5.7
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+###> algolia/search-bundle ###
+# Create a free account on www.algolia.com
+# and get your credentials from the API Keys tab.
+ALGOLIA_APP_ID=...
+ALGOLIA_API_KEY=...
+###< algolia/search-bundle ###
